--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1,3 +1,34 @@
-.example{
+* {
+    margin: 0;
+    padding: 0;
+}
+html,
+body {
+    height: 100%;
+}
+
+.example {
     color: red;
+}
+
+#css_left_sidebar {
+    float:left;
+    width: 100px;
+    height: 300px;
+}
+
+#css_header {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+}
+
+#css_footer  {
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
+    width: 100%;
+    background: red;
 }
