appBundel has been deleted

--- a/src/ProstooremonteBundle/Resources/views/Templates/index.html.twig
+++ b/src/ProstooremonteBundle/Resources/views/Templates/index.html.twig
@@ -5,7 +5,9 @@
 
     <img src="{{ asset('favicon.ico') }}" alt="альтернативный текст">
     <script type="text/javascript" src="{{ asset('js/1.js') }}" ></script>
-    <script type="text/javascript" src="{{ asset('css/styles.css') }}" ></script>
+{#
+    <script type="text/css" src="{{ asset('css/styles.css') }}" ></script>
+#}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/styles.css') }}" />
     {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}
 
