--- a/src/SiteProstooremonteBundle/Resources/views/base.html.twig
+++ b/src/SiteProstooremonteBundle/Resources/views/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Просто о ремонте{% endblock %}</title>
         {% block stylesheets %}<script type="text/css" src="{{ asset('css/styles.css') }}" ></script>{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <script type="text/javascript" src="{{ asset('js/jquery/jquery-3.2.1.min.js') }}" ></script>
     </head>
     <body>
         {% include '@SiteProstooremonteBundle/header.html.twig' %}
@@ -14,7 +15,6 @@
         {% include '@SiteProstooremonteBundle/footer.html.twig' %}
 
         {% block javascript %}
-
         {% endblock %}
     </body>
 </html>
